--- a/overstack-app/public/index.html
+++ b/overstack-app/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="BCMxOSSzNC9gmozN8ajuPCA_7VVcn-weH_qKbJ_xodA" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
